# electronic-collections-web-app

./: .gitignore  README.md  build.py  fetch.py  pyproject.toml  render.py  transform.py
.github/workflows/: deploy.yml
templates/: index.html
tests/: test_alma.py  test_render.py  test_transform.py
