[project]
name = "electronic-collections-web-app"
version = "0.2.0"
description = "Static site + GitHub Action that lists CUNY Network Zone electronic collections from the Alma API."
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "jinja2",
    "python-dotenv",
    "tzdata",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
